Update Train_deploy_test notebook

--- a/Train_deploy_test_AutoPilot_job.ipynb
+++ b/Train_deploy_test_AutoPilot_job.ipynb
@@ -1350,6 +1350,7 @@
     "preds = response_body.split('\\n')\n",
     "# We must discard the last element of the list, it is just an empty string\n",
     "preds=preds[:-1]\n",
+    "# Check the count of results\n",
     "len(preds)"
    ]
   },
